test1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
      - name: name
        image: paddycarey/go-echo
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 10m
            memory: 20Mi
        ports:
        - containerPort: 8000
