test1/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: echo-server-https
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`test.com`)
    kind: Rule
    services:
    - name: echo-server
      port: 80
  tls:
    secretName: echo-server-cert
